syntax = "proto3";

package user;

option go_package="mgrankin-cloud.sso.v1;ssov2";

service User {
  rpc GetUser(GetUserRequest) returns (GetUserResponse);

  rpc UpdateUserInfo(UpdateUserInfoRequest) returns (UpdateUserInfoResponse);

  rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse);

  rpc ChangeUserPassword(ChangeUserPasswordRequest) returns (ChangeUserPasswordResponse);
}

message GetUserRequest {
  int64 user_id = 1;
}

message GetUserResponse {
  int64 user_id = 1;
  string email = 2;
  string username = 3;
  string phone = 4;
  bytes photo = 5;
}

message UpdateUserInfoRequest {
  int64 user_id = 1;
  string email = 2;
  string username = 3;
  string phone = 4;
  bytes photo = 5;
}

message UpdateUserInfoResponse {
  bool success = 1;
  int64 user_id = 2;
}

message DeleteUserRequest {
  int64 user_id = 1;
}

message DeleteUserResponse {
  bool success = 1;
  int64 user_id = 2;
}

message ChangeUserPasswordRequest {
  int64 user_id = 1;
  string old_password = 2;
  string new_password = 3;
}

message ChangeUserPasswordResponse {
  bool success = 1;
}


